new_local_repository = use_repo_rule("@bazel_tools//tools/build_defs/repo:local.bzl", "new_local_repository")

# Local GCC cpp_libs repositories - provides runtime libraries matching the local GCC toolchain
# These are non-hermetic but match the toolchain actually used for compilation
# We create separate repositories for /opt and /usr, then select between them
new_local_repository(
    name = "cpp_libs_opt",
    build_file_content = """
filegroup(
    name = "cpp_libs",
    srcs = glob([
        "gcc-14.2.0/lib64/libgcc_s.so*",
        "gcc-14.2.0/lib64/libstdc++.so*",
    ], exclude = ["**/*.py"], allow_empty = True),
    visibility = ["//visibility:public"],
)
    """,
    path = "/opt",
)

new_local_repository(
    name = "cpp_libs_usr",
    build_file_content = """
filegroup(
    name = "cpp_libs",
    srcs = glob([
        "lib/x86_64-linux-gnu/libgcc_s.so*",
        "lib/x86_64-linux-gnu/libstdc++.so*",
        "lib/gcc/x86_64-linux-gnu/14/libgcc_s.so*",
        "lib/gcc/x86_64-linux-gnu/14/libstdc++.so*",
        "lib64/libgcc_s.so*",
        "lib64/libstdc++.so*",
    ], exclude = ["**/*.py"], allow_empty = True),
    visibility = ["//visibility:public"],
)
    """,
    path = "/usr",
)
