cpp_libs_repository = use_repo_rule("//omd/packages/cpp-libs:cpp-libs.repository.bzl", "cpp_libs_repository")

# Local GCC cpp_libs repositories - provides runtime libraries matching the local GCC toolchain
# These are non-hermetic but match the toolchain actually used for compilation
# Library locations are auto-discovered via g++ -print-file-name
#
# gcc_path *must* match the gcc_path in bazel/toolchains/cc/gcc/local/BUILD for the toolchain definitions.
cpp_libs_repository(
    name = "cpp_libs_opt",
    gcc_path = "/opt/gcc-14.2.0/bin/gcc-14",
)

cpp_libs_repository(
    name = "cpp_libs_usr",
    gcc_path = "/usr/bin/gcc-14",
)
