# Pull Ubuntu Noble base image for OCI containers
oci = use_extension("@rules_oci//oci:extensions.bzl", "oci")
oci.pull(
    name = "ubuntu_24.04",
    digest = "sha256:9cbed754112939e914291337b5e554b07ad7c392491dba6daf25eef1332a22e8",
    image = "ubuntu",
    platforms = ["linux/amd64"],
    tag = "latest",
)
use_repo(oci, "ubuntu_24.04", "ubuntu_24.04_linux_amd64")
