python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.13.9",
    sha256 = "b4b0204658930337c85c321b49ed2585fe544097a72bc76dcf0b77e49fff8473",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20251014/cpython-3.13.9+20251014-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.defaults(python_version = "3.13")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)

py3mod = use_extension("//bazel/extensions:create_python_requirements.bzl", "create_python_requirements")
py3mod.requirements(
    name = "python_modules",
    ignored_modules = [
        # Broken third party packages
        "netapp-ontap",  # their build process is broken, see https://github.com/NetApp/ontap-rest-python/issues/46
    ],
    requirements_lock = "//:runtime-requirements.txt",
)
use_repo(py3mod, "python_modules")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    environment = {
        # Hack for building extensions from source.
        # See also:  https://github.com/bazelbuild/rules_python/issues/1463
        "CC": "gcc-14",
    },
    hub_name = "cmk_requirements",
    python_version = "3.13",
    requirements_by_platform = {
        "@//:requirements.txt": "linux_*",
    },
)
use_repo(pip, "cmk_requirements")

types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "cmk_types",
    pip_requirements = "@cmk_requirements//:requirements.bzl",
    requirements_txt = "//:requirements.txt",
)
use_repo(types, "cmk_types")

# ATTENTION: The following python toolchains are solely used for testing the agent plugins with multiple python versions.
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.8.20",
    sha256 = "285e141c36f88b2e9357654c5f77d1f8fb29cc25132698fe35bb30d787f38e87",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20241002/cpython-3.8.20+20241002-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.toolchain(
    python_version = "3.8",
)
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.9.25",
    sha256 = "42834f61eb6df43432c3dd6ab9ca3fdf8c06d10a404ebdb53d6902e6b9570b08",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20251031/cpython-3.9.25+20251031-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.toolchain(
    python_version = "3.9",
)
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.10.19",
    sha256 = "42133dd8bc7a2f3eee0e6f544a074149d1dc96621be12afdeb4d24ef66ce9db4",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20251120/cpython-3.10.19+20251120-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.toolchain(
    python_version = "3.10",
)
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.11.14",
    sha256 = "ca464c619ba4c3754a430acb2c0eb0e354cccc08b4f38ade71fbe3e732ec93a3",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20251120/cpython-3.11.14+20251120-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.toolchain(
    python_version = "3.11",
)
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.12.12",
    sha256 = "c17aadf3265258bf3b4ee5182bdca24f3e4b34ffaa0a73b5efe2d84ddb9fcccc",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20251120/cpython-3.12.12+20251120-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.toolchain(
    python_version = "3.12",
)
use_repo(
    python,
    "python_3_10",
    "python_3_11",
    "python_3_12",
    "python_3_13",
    "python_3_8",
    "python_3_9",
)

pip.parse(
    hub_name = "agent_plugins_requirements_3_8",
    python_version = "3.8",
    requirements_by_platform = {
        "@//tests/agent-plugin-unit:requirements_3_8.txt": "linux_*",
    },
)
use_repo(pip, "agent_plugins_requirements_3_8")
pip.parse(
    hub_name = "agent_plugins_requirements_3_9",
    python_version = "3.9",
    requirements_by_platform = {
        "@//tests/agent-plugin-unit:requirements_3_9.txt": "linux_*",
    },
)
use_repo(pip, "agent_plugins_requirements_3_9")
pip.parse(
    hub_name = "agent_plugins_requirements_3_10",
    python_version = "3.10",
    requirements_by_platform = {
        "@//tests/agent-plugin-unit:requirements_3_10.txt": "linux_*",
    },
)
use_repo(pip, "agent_plugins_requirements_3_10")
pip.parse(
    hub_name = "agent_plugins_requirements_3_11",
    python_version = "3.11",
    requirements_by_platform = {
        "@//tests/agent-plugin-unit:requirements_3_11.txt": "linux_*",
    },
)
use_repo(pip, "agent_plugins_requirements_3_11")
pip.parse(
    hub_name = "agent_plugins_requirements_3_12",
    python_version = "3.12",
    requirements_by_platform = {
        "@//tests/agent-plugin-unit:requirements_3_12.txt": "linux_*",
    },
)
use_repo(pip, "agent_plugins_requirements_3_12")
pip.parse(
    hub_name = "agent_plugins_requirements_3_13",
    python_version = "3.13",
    requirements_by_platform = {
        "@//tests/agent-plugin-unit:requirements_3_13.txt": "linux_*",
    },
)
use_repo(pip, "agent_plugins_requirements_3_13")
