python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.single_version_platform_override(
    platform = "x86_64-unknown-linux-gnu",
    python_version = "3.13.9",
    sha256 = "b4b0204658930337c85c321b49ed2585fe544097a72bc76dcf0b77e49fff8473",
    urls = [
        "https://github.com/astral-sh/python-build-standalone/releases/download/20251014/cpython-3.13.9+20251014-x86_64-unknown-linux-gnu-install_only.tar.gz",
    ],
)
python.defaults(python_version = "3.13")
python.toolchain(
    configure_coverage_tool = True,
    python_version = "3.13",
)

py3mod = use_extension("//bazel/extensions:create_python_requirements.bzl", "create_python_requirements")
py3mod.requirements(
    name = "python_modules",
    ignored_modules = [
        # Broken third party packages
        "netapp-ontap",  # their build process is broken, see https://github.com/NetApp/ontap-rest-python/issues/46
    ],
    requirements_lock = "//:runtime-requirements.txt",
)
use_repo(py3mod, "python_modules")

pip = use_extension("@rules_python//python/extensions:pip.bzl", "pip")
pip.parse(
    environment = {
        # Hack for building extensions from source.
        # See also:  https://github.com/bazelbuild/rules_python/issues/1463
        "CC": "gcc-14",
    },
    hub_name = "cmk_requirements",
    python_version = "3.13",
    requirements_by_platform = {
        "@//:requirements.txt": "linux_*",
    },
)
pip.parse(
    hub_name = "tools_requirements",
    python_version = "3.13",
    requirements_by_platform = {
        "//bazel/tools:requirements.txt": "linux_*",
    },
)
use_repo(pip, "cmk_requirements", "tools_requirements")

types = use_extension("@rules_mypy//mypy:types.bzl", "types")
types.requirements(
    name = "cmk_types",
    pip_requirements = "@cmk_requirements//:requirements.bzl",
    requirements_txt = "//:requirements.txt",
)
use_repo(types, "cmk_types")
